syntax = "proto3";

message Empty {}

message openBrowserRequest {
  string url = 1;
  string browser = 2;
}

message Response {
  string log = 1;
}

service  Playwright {
  rpc OpenBrowser(openBrowserRequest) returns (stream Response) {}
  rpc CloseBrowser(Empty) returns (Response) {}
}
